--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ body {
 	box-sizing: border-box;
 	margin: auto;
 	margin-top: 30px;
+	position: relative;
 }
 
 footer {
@@ -116,4 +117,20 @@ img {
 img.screen {
 	padding: 30px 0;
 	box-sizing: border-box;
+}
+
+.main {
+}
+
+.pagination {
+    width: 100%;
+    padding: 30px 0;
+}
+
+.next {
+	float: left;
+}
+
+.prev {
+	float: right;
 }
