--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,34 @@ img.screen {
 .prev {
 	float: right;
 }
+
+.avatar img {
+	max-width: 100%;
+	margin-bottom: 1em;
+}
+
+.dim {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background: rgba(0,0,0,0.5);
+	display: none;
+}
+
+.display {
+	position: fixed;
+	text-align: center;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	display: none;
+}
+
+.display img {
+    max-width: 100%;
+    max-height: 80%;
+    margin-top: 50px;
+}
