--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ label.checkbox {
 	display: inline;
 }
 
-input[type=submit] {
+input[type=submit], button {
 	margin-top: 1em;
 }
 
@@ -73,6 +73,8 @@ h1 a {
 
 h2 {
 	font-size: 1.2em;
+    margin: 0;
+    padding: 0.8em 0;
 }
 
 .container {
@@ -230,4 +232,20 @@ textarea {
 	padding: 0.5em;
 	margin: 0.5em 0;
 	width: 100%;
+}
+
+.messages {
+	margin-top: 2em;
+}
+
+.message {
+	padding: 1em;
+	border: 1px solid #dadada;
+	background: #f3f3f3;
+	margin-top: 1em;
+}
+
+.message b {
+	display: inline-block;
+	padding-bottom: 1em;
 }
